# Test_task

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  handlers.py  init_db.py  main.py  pyproject.toml  requirements.txt  settings.toml
src/user/: db.py  domain.py
templates/: create_user.html  graph.html  table.html  update_user.html  users.html
